<resources>
    <string name="release_1"><![CDATA[<b>1.0.0</b> - Initial release!
        <br/>• View a season overview
        <br/>• See the results for all F1 races from 2019 dating back to 2000
        <br/>• See the qualifying results for Q1, Q2 and Q3 for all races
        <br/>• As of May 2020 it is unclear what the 2020 season will look like, so I cannot guarantee that new races will be updated live]]></string>
    <string name="release_2"><![CDATA[<b>1.0.2</b> - Tidying up
        <br/>• Changed app flow to default to the season overview screens rather than the 2019 season
        <br/>• Changed theme throughout so it can be more customisable down the road]]></string>
    <string name="release_4"><![CDATA[<b>2.0.0</b> - Back to the beginning
        <br/>• Overhauled UI for viewing the history of F1
        <br/>• Flashback now supports all races from 1950 to 2019
        <br/>• See a breakdown of the constructor standings per race
        <br/>• Fixed some blank spaces in 2017 race data
        <br/>• Updated components to 2.0.1]]></string>
    <string name="release_6"><![CDATA[<b>3.0.0</b> - Championship standings
        <br/>• Added championship standings options to all seasons
        <br/>• Added daily sync for current
        <br/>• Updated firebase dependencies]]></string>
    <string name="release_7"><![CDATA[<b>4.0.0</b> - New look and feel
        <br/>• Shifted app design over to a Material Design 2 inspired UI
        <br/>• Improved network state management
        <br/>• The usual disclaimer of general data patching and bug fixes]]></string>
    <string name="release_8"><![CDATA[<b>4.1.0</b> - Dark mode!
        <br/>• Added dark mode toggle to settings
        <br/>• Added grid penalty indicator to race qualifying view]]></string>
    <string name="release_10"><![CDATA[<b>4.3.0</b> - News feed!
        <br/>• Added news feed to the app
        <br/>• Added ability to toggle preferred news sources
        <br/>• Added status for race data being synchronised]]></string>
    <string name="release_13"><![CDATA[<b>4.3.5</b> - Shuffle time
        <br/>• Moved news to it\'s own screen
        <br/>• Fixed race status oversight in prep for 2020 season start
        <br/>• Changed loading stack to only show spinner and not skeleton views on initial load
        <br/>• Tidied up network logging
        <br/>• Fixed pit lane starts not being filtered properly in qualifying view
        <br/>• Updated swiperefesh to 1.1.0
        <br/>• Updated components to 2.1.0
        <br/>• Updated utilities to 2.0.1
        <br/>• Updated firebase analytics to 17.4.3
        <br/>• Updated firebase crashlytics to 2.10.1]]></string>
    <string name="release_14"><![CDATA[<b>4.4.1</b> - 2020 season start
        <br/>• Addressed some bugs that have risen due to season starting
        <br/>• Fixed issue with partial qualifying data not displaying when race data is unavailable
        <br/>• Added setting to expand season list to full height by default
        <br/>• Fixed some wording oversights with races being scheduled in the future or past
        <br/>• Fixed optional message being displayed
        <br/>• Moved app banner position to pinned position at the top of the display]]></string>
    <string name="release_15"><![CDATA[<b>4.4.3</b> - Track images
        <br/>• Added track layout images to some of the modern tracks
        <br/>• Added qualifying and race data distinction with data availability
        <br/>• Added constructor colour bar to qualifying and race details to make driver\'s constructor more obvious
        <br/>• Fixed DNF label showing when driver finishes normally
        <br/>• Fixed message label appearing in top of screen properly]]></string>
    <string name="release_16"><![CDATA[<b>4.4.6</b> - Driver statuses
        <br/>• Updated layout for driver season status to be less confusing
        <br/>• Fixed theming bugs on maps links
        <br/>• Fixed incorrect round being used as reference message for driver stats]]></string>
    <string name="release_18"><![CDATA[<b>4.5.0</b> - Behind the scenes
        <br/>• Backend fixes to data management
        <br/>• Added notification for when results are being pulled
        <br/>• Fix for Perez qualifying data showing up in Round 4 2020 data
        <br/>• Fix for closing driver season dropdown collapsing again
        <br/>• Moved constructor color bars to edge]]></string>
    <string name="release_20"><![CDATA[<b>4.6.1</b>
        <br/>• Added RaceFans.net as a supported news site in the news tab
        <br/>• Bringing project dependencies up to date
        <br/>• Backend prep for driver career breakdown
        <br/>• Fixed some race data format errors from races in 1962
        <br/>• Improved in-app experience during a sync event after a race]]></string>
    <string name="release_21"><![CDATA[<b>4.7.0</b> - Driver overviews
        <br/>• Adds driver overview. See a history of any drivers performance in F1!
        <br/>• Fixed edge case crash in driver season data updating whilst app is open
        <br/>• Usual assortment of bugfixes and improvements]]></string>
    <string name="release_22"><![CDATA[<b>4.7.2</b>
        <br/>• Fixes issue with 2020 Racing Point penalty not being shown in the preview
        <br/>• Fixed position delta always being 0 for podium sitters
        <br/>• Fixed DNF label showing up for not finished status]]></string>
    <string name="release_23"><![CDATA[<b>4.7.3</b>
        <br/>• Fixes issue with driver stats qualifying data taking into account DNS
        <br/>• Adds ability to customise bar animations throughout the app
        <br/>• Fixes typos throughout error messages]]></string>
    <string name="release_24"><![CDATA[<b>4.7.4</b>
        <br/>• Fixes issue with track layout displayed in 2020 Sakhir Grand Prix race
        <br/>• Migrates to Firebase crashlytics
        <br/>• Usual assortment of bugfixes and improvements]]></string>
    <string name="release_25"><![CDATA[<b>4.7.5</b>
        <br/>• Adds setting option to open news articles in external browser by default
        <br/>• Fixes crash in certain seasons in the 1980s
        <br/>• Fixes theming issue with circuit icons that are not fully supported]]></string>
    <string name="release_26"><![CDATA[<b>4.7.8</b>
        <br/>• Adds wikipedia links to driver overview, race and circuit information screens
        <br/>• Fixes some constructor penalties not being applied to disqualified teams throughout F1]]></string>
    <string name="release_27"><![CDATA[<b>4.8.0</b>
        <br/>• Handles constructors championship starting in 1958 properly
        <br/>• Tweaked layout of Driver Overview season navigation]]></string>
    <string name="release_28"><![CDATA[<b>5.0.0</b>
        <br/>• Constructor overview! View a simplistic history of a constructor in F1
        <br/>• Fixes more than 5 drivers under constructor not stacking properly]]></string>
    <string name="release_30"><![CDATA[<b>5.1.0</b>
        <br/>• Migrated news away to RSS feed - Configure predefined or your own RSS feeds for formula 1 news
        <br/>• Fixed typos in settings panel
        <br/>• Fixed edge case crash in 1990s qualifying data]]></string>
    <string name="release_31"><![CDATA[<b>5.2.1</b>
        <br/>• Increases minimum support to Android 6.0 Marshmellow (API 23)
        <br/>• Adds initial landscape support and a custom view for the home screen
        <br/>• Changes RSS news animation and close animation to reduce crash rates
        <br/>• Fixes crash when "Show on map" is pressed on certain devices
        <br/>• Fixes some theming issues for new RSS feed section of the app
        <br/>• Updated firebase analytics to 18.0.0
        <br/>• Updated firebase auth to 20.0.1
        <br/>• Updated firebase firestore to 22.0.0
        <br/>• Updated firebase crashlytics to 17.3.0]]></string>
    <string name="release_32"><![CDATA[<b>5.3.0</b>
        <br/>• Added notification support! Get notified for races and qualifying sessions 30 minutes before
        <br/>• Fixed theming gaps in Android 6.0 and 6.1]]></string>
    <string name="release_33"><![CDATA[<b>5.3.1</b>
        <br/>• Adds copy of privacy policy in app
        <br/>• Adds auto enrolment into notification support]]></string>
    <string name="app_lockout_title">App lockout</string>
    <string name="settings_title">Settings</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_channel_race_title">Race</string>
    <string name="settings_notifications_channel_race_description">Receive notifications 30 minutes before a race starts. Configure them here</string>
    <string name="settings_notifications_channel_qualifying_title">Qualifying</string>
    <string name="settings_notifications_channel_qualifying_description">Receive notifications 30 minutes before qualifying starts. Configure them here</string>
    <string name="settings_notifications_nonchannel_title">Notifications</string>
    <string name="settings_notifications_nonchannel_description">Turn off the app notifications by turning them off in your settings</string>
    <string name="settings_customisation">Customisation</string>
    <string name="settings_defaults_year_dialog_title">Season</string>
    <string name="settings_defaults_year_dialog_confirm">Confirm</string>
    <string name="settings_defaults_year_dialog_cancel">Cancel</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_theme_title">App theme</string>
    <string name="settings_theme_theme_description">Pick your app theme preference</string>
    <string name="settings_theme_theme_follow_system">Follow system preferences</string>
    <string name="settings_theme_theme_light">Light mode</string>
    <string name="settings_theme_theme_dark">Dark mode</string>
    <string name="settings_bar_animation">Bar Animation</string>
    <string name="settings_customisation_qualifying_delta_title">Qualifying delta</string>
    <string name="settings_customisation_qualifying_delta_description">Show the lap time delta alongside the qualifying time when displaying qualifying results</string>
    <string name="settings_help">About</string>
    <string name="settings_help_about_title">About this app</string>
    <string name="settings_help_about_description">About the application and the developer</string>
    <string name="settings_help_planned_title">Planned</string>
    <string name="settings_help_planned_description">What I want to add to this app in the future</string>
    <string name="settings_help_release_notes_title">Release notes</string>
    <string name="settings_help_release_notes_description">See the release notes history</string>
    <string name="settings_help_crash_reporting_title">Crash Reporting</string>
    <string name="settings_help_crash_reporting_description">Send device information and crash stack traces to the developer</string>
    <string name="settings_help_suggestions_title">Have a suggestion?</string>
    <string name="settings_help_suggestions_description">Send the developer an email with any suggestions you may have. Alternately turn on shake to report and shake your device</string>
    <string name="settings_help_shake_to_report_title">Shake the app to report a bug or a feature?</string>
    <string name="settings_help_shake_to_report_description">Shake the app at any time to screenshot and send me any bugs, issues, or suggestions you may have for this app!</string>
    <string name="nav_drivers">Drivers</string>
    <string name="nav_constructors">Constructors</string>
    <string name="nav_seasons">Seasons</string>
    <string name="nav_rss">RSS</string>
    <string name="nav_calendar">Calendar</string>
    <string name="circuit_info_circuit">Circuit</string>
    <string name="circuit_info_wikipedia">Wikipedia</string>
</resources>