<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_customisation"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="prefs_customisation_year"
            android:summary="@string/settings_customisation_year_description"
            android:title="@string/settings_customisation_year_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreference
            android:key="prefs_customisation_qualifying_delta"
            android:summary="@string/settings_customisation_qualifying_delta_description"
            android:title="@string/settings_customisation_qualifying_delta_title"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/settings_help"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="prefs_help_about"
            android:summary="@string/settings_help_about_description"
            android:title="@string/settings_help_about_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.Preference
            android:key="prefs_help_release_notes"
            android:summary="@string/settings_help_release_notes_description"
            android:title="@string/settings_help_release_notes_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.Preference
            android:key="prefs_help_planned"
            android:summary="@string/settings_help_planned_description"
            android:title="@string/settings_help_planned_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreference
            android:key="prefs_help_crash_reporting"
            android:summary="@string/settings_help_crash_reporting_description"
            android:title="@string/settings_help_crash_reporting_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.Preference
            android:key="prefs_help_suggestions"
            android:summary="@string/settings_help_suggestions_description"
            android:title="@string/settings_help_suggestions_title"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreference
            android:key="prefs_help_shake_to_report"
            android:summary="@string/settings_help_shake_to_report_description"
            android:title="@string/settings_help_shake_to_report_title"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>